[package]
name = "greenmove"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "greenmove"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
